--- a/SwapShop/package.json
+++ b/SwapShop/package.json
@@ -10,9 +10,21 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@fontsource/league-spartan": "^4.5.11",
+    "@react-native-community/masked-view": "^0.1.11",
     "@react-native-firebase/app": "^15.3.0",
+    "@react-navigation/native": "^6.0.11",
+    "@react-navigation/native-stack": "^6.7.0",
+    "@rneui/base": "^4.0.0-rc.6",
+    "@rneui/themed": "^4.0.0-rc.6",
+    "fontsource-league-spartan": "^4.0.0",
     "react": "18.0.0",
     "react-native": "0.69.4",
+    "react-native-gesture-handler": "^2.5.0",
+    "react-native-ratings": "^8.1.0",
+    "react-native-reanimated": "^2.9.1",
+    "react-native-safe-area-context": "^4.3.1",
+    "react-native-screens": "^3.15.0",
     "react-native-vector-icons": "^9.2.0"
   },
   "devDependencies": {
