--- a/SwapShop/package.json
+++ b/SwapShop/package.json
@@ -13,6 +13,7 @@
     "@fontsource/league-spartan": "^4.5.11",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-native-firebase/app": "^15.3.0",
+    "@react-native-firebase/auth": "^15.3.0",
     "@react-navigation/native": "^6.0.11",
     "@react-navigation/native-stack": "^6.7.0",
     "@rneui/base": "^4.0.0-rc.6",
@@ -35,6 +36,7 @@
     "eslint": "^7.32.0",
     "jest": "^26.6.3",
     "metro-react-native-babel-preset": "^0.70.3",
+    "react-native-clean-project": "^4.0.1",
     "react-test-renderer": "18.0.0"
   },
   "jest": {
