--- a/SwapShop/package.json
+++ b/SwapShop/package.json
@@ -11,21 +11,20 @@
   },
   "dependencies": {
     "@fontsource/league-spartan": "^4.5.11",
-    "@react-native-community/masked-view": "^0.1.11",
     "@react-native-firebase/app": "^15.3.0",
     "@react-native-firebase/auth": "^15.3.0",
-    "@react-navigation/native": "^6.0.11",
-    "@react-navigation/native-stack": "^6.7.0",
+    "@react-navigation/bottom-tabs": "^6.3.3",
+    "@react-navigation/native": "^6.0.12",
+    "@react-navigation/native-stack": "^6.8.0",
     "@rneui/base": "^4.0.0-rc.6",
     "@rneui/themed": "^4.0.0-rc.6",
     "fontsource-league-spartan": "^4.0.0",
     "react": "18.0.0",
     "react-native": "0.69.4",
+    "react-native-animatable": "^1.3.3",
     "react-native-gesture-handler": "^2.5.0",
-    "react-native-ratings": "^8.1.0",
-    "react-native-reanimated": "^2.9.1",
-    "react-native-safe-area-context": "^4.3.1",
-    "react-native-screens": "^3.15.0",
+    "react-native-safe-area-context": "^4.3.3",
+    "react-native-screens": "^3.16.0",
     "react-native-vector-icons": "^9.2.0"
   },
   "devDependencies": {
@@ -36,7 +35,6 @@
     "eslint": "^7.32.0",
     "jest": "^26.6.3",
     "metro-react-native-babel-preset": "^0.70.3",
-    "react-native-clean-project": "^4.0.1",
     "react-test-renderer": "18.0.0"
   },
   "jest": {
