--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,17 +5,31 @@ version: 2.1
 # See: https://circleci.com/docs/2.0/orb-intro/
 orbs:
   node: circleci/node@4.7
-
+executors:
+  linux:
+    docker:
+      - image: cimg/base:2021.04
 # Invoke jobs via workflows
 # See: https://circleci.com/docs/2.0/configuration-reference/#workflows
-workflows:
-  sample: # This is the name of the workflow, feel free to change it to better match your workflow.
-    # Inside the workflow, you define the jobs you want to run.
-    jobs:
-      - node/test:
-          # This is the node version to use for the `cimg/node` tag
-          # Relevant tags can be found on the CircleCI Developer Hub
-          # https://circleci.com/developer/images/image/cimg/node
-          version: '16.10'
-          # If you are using yarn, change the line below from "npm" to "yarn"
-          pkg-manager: npm
+jobs:
+  test:
+    parameters:
+      node-version:
+        type: string
+    executor: linux
+    steps:
+      - checkout
+      - node/install:
+          node-version: [16.x]
+      - run:
+          name: Install Dependencies
+          command: npm install
+      - run:
+          name: Run tests and collect coverage
+          command: npm test  
+      - run:
+          name: Upload coverage report to Codecov  
+          command: bash <(curl -s https://codecov.io/bash) -F $CIRCLE_JOB
+
+
+      
