--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,31 +5,31 @@ version: 2.1
 # See: https://circleci.com/docs/2.0/orb-intro/
 orbs:
   node: circleci/node@4.7
-executors:
-  linux:
-    docker:
-      - image: cimg/base:2021.04
+
 # Invoke jobs via workflows
 # See: https://circleci.com/docs/2.0/configuration-reference/#workflows
 jobs:
-  test:
-    parameters:
-      node-version:
-        type: string
-    executor: linux
+  build_and_test:
+    executor: node/default
     steps:
       - checkout
-      - node/install:
-          node-version: [16.x]
+      - node/install-package:
+          pkg-manager: npm
       - run:
           name: Install Dependencies
           command: npm install
       - run:
+          name: Build app
+          command: npm build    
+      - run:
           name: Run tests and collect coverage
-          command: npm test  
+          command: npm run test  
       - run:
           name: Upload coverage report to Codecov  
           command: bash <(curl -s https://codecov.io/bash) -F $CIRCLE_JOB
 
-
+workflows:
+  swapshop:
+    jobs:
+      - build_and_test
       
