--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,7 +17,7 @@ jobs:
       - checkout
          
       - node/install-package:
-          app-dir:  SwapShop
+          app-dir:  ~/SwapShop
           cache-version: v1
           cache-path: node_modules
           pkg-manager: npm
