--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,7 +16,7 @@ jobs:
     steps:
       - checkout
          
-      - node/install-package:
+      - node/install-packages:
           app-dir:  ~/SwapShop
           cache-version: v1
           cache-path: node_modules
