--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,6 +5,11 @@ orbs:
 
 jobs:
   build_and_test:
+    parameters:
+       app-dir:
+        type: string
+        default: '.'
+        description: Path to the directory containing your package.json file. Not needed if package.json lives in the root.
   
     executor: node/default
     working_directory: ./SwapShop
