--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,11 +12,11 @@ jobs:
     parameters:
        app-dir:
         type: string
-        default: './SwapShop'
+        default: '~/SwapShop'
         description: Path to the directory containing your package.json file. Not needed if package.json lives in the root.
   
     executor: node/default
-    working_directory: ./SwapShop
+    working_directory: ~/SwapShop
     steps:
       - checkout
          
