--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,6 +2,7 @@ version: 2.1
 
 orbs:
   node: circleci/node@5.0.2
+  coveralls: coveralls/coveralls@1.0.6
 on:
   push:
     branches: [ main ]
@@ -9,7 +10,9 @@ on:
     branches: [ main ]
 jobs:
   build_and_test:
-   
+    docker:
+      # replace with your preferred image
+      - image: cimg/base:stable
   
     executor: node/default
     steps:
@@ -23,10 +26,12 @@ jobs:
       - run:
           name: Run tests and collect coverage
           command: npm run test  
+      
+      - coveralls/upload
      
-      - run:
-          name: Upload coverage report to Codecov  
-          command: bash <(curl -s https://codecov.io/bash) -F $CIRCLE_JOB
+      # - run:
+      #     name: Upload coverage report to Codecov  
+      #     command: bash <(curl -s https://codecov.io/bash) -F $CIRCLE_JOB
 
 workflows:
   
