--- a/package.json
+++ b/package.json
@@ -9,6 +9,11 @@
     "test": "jest",
     "lint": "eslint ."
   },
+  "author": "",
+  "license": "ISC",
+  "engines": {
+    "node": "16.x"
+  },
   "dependencies": {
     "@fontsource/league-spartan": "^4.5.11",
     "@react-native-firebase/app": "^15.3.0",
@@ -32,6 +37,7 @@
     "@babel/runtime": "^7.12.5",
     "@react-native-community/eslint-config": "^2.0.0",
     "babel-jest": "^26.6.3",
+    "coveralls": "^3.1.1",
     "eslint": "^7.32.0",
     "jest": "^26.6.3",
     "metro-react-native-babel-preset": "^0.70.3",
