--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -10,14 +10,13 @@ env:
 
 jobs:
   test:
-    name: Node ${{ matrix.node }} on ${{ matrix.os }}
-    runs-on: ${{ matrix.os }}
-
+    # name: Node ${{ matrix.node }} on ${{ matrix.os }}
+    # runs-on: ${{ matrix.os }}
+    runs-on: ubuntu-latest
     strategy:
       fail-fast: false
       matrix:
         node-version: [16.x]
-        os: [ubuntu-latest, windows-latest]
 
     steps:
       - name: Checkout
@@ -26,16 +25,21 @@ jobs:
       - name: Set Node.js version
         uses: actions/setup-node@v1
         with:
-          node-version: ${{ matrix.node }}
+          node-version: ${{ matrix.node-version }}
+          cache: 'npm'
+          cache-dependency-path: package-lock.json
 
       - name: Install npm dependencies
         run: npm install # switch to `npm ci` when Node.js 6 support is dropped
+
+      - run: npm ci
+      - run: npm run build --if-present
 
       - name: Run lint
         run: npm run lint
 
       - name: Run tests
-        run: npm run test-cov
+        run: npm test
 
       - name: Coveralls GitHub Action
         uses: coverallsapp/github-action@1.1.3
