--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "node": "16.x"
   },
   "dependencies": {
+    "@babel/polyfill": "^7.12.1",
+    "@babel/preset-react": "^7.18.6",
     "@fontsource/league-spartan": "^4.5.11",
     "@react-native-firebase/app": "^15.3.0",
     "@react-native-firebase/auth": "^15.3.0",
@@ -23,6 +25,8 @@
     "@react-navigation/native-stack": "^6.8.0",
     "@rneui/base": "^4.0.0-rc.6",
     "@rneui/themed": "^4.0.0-rc.6",
+    "@testing-library/jest-native": "^4.0.11",
+    "@testing-library/react-native": "^11.0.0",
     "fontsource-league-spartan": "^4.0.0",
     "react": "18.0.0",
     "react-native": "0.69.4",
@@ -34,6 +38,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
+    "@babel/preset-env": "^7.18.10",
     "@babel/runtime": "^7.12.5",
     "@react-native-community/eslint-config": "^2.0.0",
     "babel-jest": "^26.6.3",
@@ -44,6 +49,12 @@
     "react-test-renderer": "18.0.0"
   },
   "jest": {
-    "preset": "react-native"
+    "preset": "react-native",
+    "verbose": true,
+    "transformIgnorePatterns": [
+      "node_modules/(?!(jest-)?@?react-native|react-clone-referenced-element|@react-native-community|expo(nent)?|@expo(nent)?/.*|@unimodules|sentry-expo|native-base|@react-native-community|@react-navigation/(.*))"
+    ],
+    "automock": false
+
   }
 }
