--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@testing-library/jest-native": "^4.0.11",
     "@testing-library/react-native": "^11.0.0",
     "fontsource-league-spartan": "^4.0.0",
+    "mocha-lcov-reporter": "^1.3.0",
     "react": "18.0.0",
     "react-native": "0.69.4",
     "react-native-animatable": "^1.3.3",
@@ -41,20 +42,26 @@
     "@babel/preset-env": "^7.18.10",
     "@babel/runtime": "^7.12.5",
     "@react-native-community/eslint-config": "^2.0.0",
+    "@types/jest": "^29.0.0",
     "babel-jest": "^26.6.3",
     "coveralls": "^3.1.1",
     "eslint": "^7.32.0",
     "jest": "^26.6.3",
     "metro-react-native-babel-preset": "^0.70.3",
-    "react-test-renderer": "18.0.0"
+    "mocha": "^10.0.0",
+    "react-test-renderer": "18.0.0",
+    "ts-jest": "^28.0.8",
+    "typescript": "^4.8.2"
   },
   "jest": {
-    "preset": "react-native",
+    "coverageReporters": [
+      "json",
+      "html"
+    ],
     "verbose": true,
     "transformIgnorePatterns": [
       "node_modules/(?!(jest-)?@?react-native|react-clone-referenced-element|@react-native-community|expo(nent)?|@expo(nent)?/.*|@unimodules|sentry-expo|native-base|@react-native-community|@react-navigation/(.*))"
     ],
     "automock": false
-
   }
 }
