--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -19,15 +19,16 @@ jobs:
 
     steps:
       - name: Checkout
-        uses: actions/checkout@v2
+         uses: actions/checkout@v3
 
-      - name: Set Node.js version
-        uses: actions/setup-node@v1
+      - name: Buidling using Node.js ${{ matrix.node-version }}.
+        env:
+         CI: true
+        uses: actions/setup-node@v3
         with:
           node-version: ${{ matrix.node-version }}
           cache: 'npm'
           cache-dependency-path: package-lock.json
-
 
       - run: npm ci
       - run: npm run build --if-present
