--- a/package.json
+++ b/package.json
@@ -54,14 +54,12 @@
     "typescript": "^4.8.2"
   },
   "jest": {
+    "verbose": true,
+    "collectCoverage": true,
     "coverageReporters": [
       "json",
       "html"
-    ],
-    "verbose": true,
-    "transformIgnorePatterns": [
-      "node_modules/(?!(jest-)?@?react-native|react-clone-referenced-element|@react-native-community|expo(nent)?|@expo(nent)?/.*|@unimodules|sentry-expo|native-base|@react-native-community|@react-navigation/(.*))"
-    ],
-    "automock": false
+    ]
+   
   }
 }
