--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -31,7 +31,7 @@ jobs:
     - run: npm run build --if-present
 
     - name: Running Jest tests
-      run: npm test
+      run: npm run test
 
     - name: Uploading coverage to Codecov
       uses: codecov/codecov-action@v2
