--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@react-navigation/native-stack": "^6.8.0",
     "@rneui/base": "^4.0.0-rc.6",
     "@rneui/themed": "^4.0.0-rc.6",
+    "@testing-library/react": "^13.4.0",
     "fontsource-league-spartan": "^4.0.0",
     "react": "18.0.0",
     "react-native": "0.69.4",
@@ -37,7 +38,18 @@
     "metro-react-native-babel-preset": "^0.70.3",
     "react-test-renderer": "18.0.0"
   },
+  "private": true,
   "jest": {
-    "preset": "react-native"
+    "preset": "react-native",
+    "collectCoverage": true,
+    "coverageReporters": [
+      "json",
+      "html"
+    ],
+    "verbose": true,
+    "transformIgnorePatterns": [
+      "node_modules/(?!(jest-)?@?react-native|react-clone-referenced-element|@react-native-community|expo(nent)?|@expo(nent)?/.*|@unimodules|sentry-expo|native-base|@react-native-community|@react-navigation/(.*))"
+    ],
+    "automock": false
   }
 }
