--- a/.github/workflows/Test.yml
+++ b/.github/workflows/Test.yml
@@ -20,6 +20,7 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v3
 
+
     - name: Buidling using Node.js ${{ matrix.node-version }}.
       env:
         CI: true
@@ -35,4 +36,4 @@ jobs:
       run: npm test
 
     - name: Codecov
-      uses: Swap-Shop/SwapShop@v3.1.0
+      uses: codecov/codecov-action@v3.1.0
