--- a/.github/workflows/Test.yml
+++ b/.github/workflows/Test.yml
@@ -29,6 +29,8 @@ jobs:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
         cache-dependency-path: package-lock.json
+    - name: Install dependencies
+      run: npm install
     - run: npm ci
     - run: npm run build --if-present
 
