--- a/.github/workflows/Test.yml
+++ b/.github/workflows/Test.yml
@@ -23,7 +23,7 @@ jobs:
 
     - name: Buidling using Node.js ${{ matrix.node-version }}.
       env:
-        CI: true
+        CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
       uses: actions/setup-node@v3
       with:
         node-version: ${{ matrix.node-version }}
