--- a/.github/workflows/server.yml
+++ b/.github/workflows/server.yml
@@ -31,7 +31,7 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
-        cache-dependency-path: package-lock.json
+        cache-dependency-path: SwapShop/package-lock.json
     - name: Install dependencies
       run: npm install
     - run: npm ci
