--- a/SwapShop/package.json
+++ b/SwapShop/package.json
@@ -21,6 +21,7 @@
     "@react-navigation/native-stack": "^6.8.0",
     "@rneui/base": "^4.0.0-rc.6",
     "@rneui/themed": "^4.0.0-rc.6",
+    "ansi-regex": "^6.0.1",
     "fontsource-league-spartan": "^4.0.0",
     "react": "18.0.0",
     "react-native": "0.69.4",
@@ -38,6 +39,7 @@
     "@babel/runtime": "^7.12.5",
     "@react-native-community/eslint-config": "^2.0.0",
     "@testing-library/react-native": "^11.0.0",
+    "@xdn/cli": "^2.53.6",
     "babel-jest": "^26.6.3",
     "eslint": "^7.32.0",
     "jest": "^26.6.3",
