--- a/SwapShop/package.json
+++ b/SwapShop/package.json
@@ -44,7 +44,8 @@
     "eslint": "^7.32.0",
     "jest": "^26.6.3",
     "metro-react-native-babel-preset": "^0.70.3",
-    "react-test-renderer": "^18.0.0"
+    "react-test-renderer": "^18.0.0",
+    "web-vitals": "^3.0.2"
   },
   "jest": {
     "preset": "jest-react-native",
