--- a/.github/workflows/server.yml
+++ b/.github/workflows/server.yml
@@ -32,8 +32,8 @@ jobs:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
         cache-dependency-path: SwapShop/package-lock.json
-    - name: Install dependencies
-      run: npm install
+    # - name: Install dependencies
+    #   run: npm install
     - run: npm ci
     - run: npm run build --if-present
 
