--- a/.github/workflows/server.yml
+++ b/.github/workflows/server.yml
@@ -34,8 +34,8 @@ jobs:
         cache-dependency-path: SwapShop/package-lock.json
     # - name: Install dependencies
     #   run: npm install
-    - run: npm ci
-    - run: npm run build --if-present
+    # - run: npm ci
+    # - run: npm run build --if-present
 
     - name: Running Jest tests
       run: npm test
