--- a/.github/workflows/server.yml
+++ b/.github/workflows/server.yml
@@ -32,10 +32,10 @@ jobs:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
         cache-dependency-path: SwapShop/package-lock.json
-    # - name: Install dependencies
-    #   run: npm install
-    # - run: npm ci
-    # - run: npm run build --if-present
+    - name: Install dependencies
+      run: npm install
+    - run: npm ci
+    - run: npm run build --if-present
 
     - name: Running Jest tests
       run: npm test
