--- a/SwapShop/package.json
+++ b/SwapShop/package.json
@@ -19,15 +19,13 @@
     "@react-navigation/bottom-tabs": "^6.3.3",
     "@react-navigation/native": "^6.0.12",
     "@react-navigation/native-stack": "^6.8.0",
-    "@rneui/base": "^4.0.0-rc.6",
-    "@rneui/themed": "^4.0.0-rc.6",
-    "ansi-regex": "^6.0.1",
-    "fontsource-league-spartan": "^4.0.0",
     "react": "18.0.0",
     "react-native": "0.69.4",
     "react-native-animatable": "^1.3.3",
     "react-native-gesture-handler": "^2.5.0",
     "react-native-image-crop-picker": "^0.38.0",
+    "react-native-paper": "^4.12.4",
+    "react-native-password-strength-meter": "^0.0.5",
     "react-native-safe-area-context": "^4.3.3",
     "react-native-screens": "^3.16.0",
     "react-native-textinput-effects": "^0.6.3",
@@ -39,13 +37,11 @@
     "@babel/runtime": "^7.12.5",
     "@react-native-community/eslint-config": "^2.0.0",
     "@testing-library/react-native": "^11.0.0",
-    "@xdn/cli": "^2.53.6",
     "babel-jest": "^26.6.3",
     "eslint": "^7.32.0",
     "jest": "^26.6.3",
     "metro-react-native-babel-preset": "^0.70.3",
-    "react-test-renderer": "^18.0.0",
-    "web-vitals": "^3.0.2"
+    "react-test-renderer": "^18.0.0"
   },
   "jest": {
     "preset": "jest-react-native",
