--- a/SwapShop/package.json
+++ b/SwapShop/package.json
@@ -19,6 +19,7 @@
     "@react-navigation/bottom-tabs": "^6.3.3",
     "@react-navigation/native": "^6.0.12",
     "@react-navigation/native-stack": "^6.8.0",
+    "moment": "^2.29.4",
     "react": "18.0.0",
     "react-native": "0.69.4",
     "react-native-animatable": "^1.3.3",
