--- a/.github/workflows/server.yml
+++ b/.github/workflows/server.yml
@@ -33,6 +33,7 @@ jobs:
         cache: 'npm'
         cache-dependency-path: SwapShop/package-lock.json
     - name: Install dependencies
+      run: npm cache clean --force
       run: npm install
     - run: npm ci
     - run: npm run build --if-present
