--- a/.github/workflows/server.yml
+++ b/.github/workflows/server.yml
@@ -32,8 +32,9 @@ jobs:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
         cache-dependency-path: SwapShop/package-lock.json
-    - name: Install dependencies
+    - name: clear cache
       run: npm cache clean --force
+    - name: Install dependencies
       run: npm install
     - run: npm ci
     - run: npm run build --if-present
