--- a/.github/workflows/server.yml
+++ b/.github/workflows/server.yml
@@ -35,7 +35,7 @@ jobs:
     - name: clear cache
       run: npm cache clean --force
     - name: Install dependencies
-      run: npm install
+      run: npm install --legacy-peer-deps
     - run: npm ci
     - run: npm run build --if-present
 
