--- a/.github/workflows/server.yml
+++ b/.github/workflows/server.yml
@@ -36,7 +36,7 @@ jobs:
       run: npm cache clean --force
     - name: Install dependencies
       run: npm install --legacy-peer-deps
-    - run: npm ci
+    - run: npm ci --legacy-peer-deps
     - run: npm run build --if-present
 
     - name: Running Jest tests
