--- a/SwapShop/package.json
+++ b/SwapShop/package.json
@@ -36,13 +36,18 @@
   "devDependencies": {
     "@babel/core": "^7.12.9",
     "@babel/runtime": "^7.12.5",
+    "@firebase/rules-unit-testing": "^2.0.4",
     "@react-native-community/eslint-config": "^2.0.0",
     "@testing-library/react-native": "^11.0.0",
+    "@types/jest": "^29.0.3",
+    "@types/mocha": "^9.1.1",
     "babel-jest": "^26.6.3",
     "eslint": "^7.32.0",
+    "firestore-jest-mock": "^0.19.0",
     "jest": "^26.6.3",
     "metro-react-native-babel-preset": "^0.70.3",
-    "react-test-renderer": "^18.0.0"
+    "react-test-renderer": "^18.0.0",
+    "ts-jest": "^29.0.2"
   },
   "jest": {
     "preset": "jest-react-native",
