--- a/SwapShop/package.json
+++ b/SwapShop/package.json
@@ -12,23 +12,31 @@
   },
   "dependencies": {
     "@fontsource/league-spartan": "^4.5.11",
+    "@freakycoder/react-native-bounceable": "^1.0.3",
     "@react-native-firebase/app": "^15.6.0",
     "@react-native-firebase/auth": "^15.4.0",
     "@react-native-firebase/firestore": "^15.4.0",
     "@react-native-firebase/storage": "^15.4.0",
     "@react-navigation/bottom-tabs": "^6.3.3",
+    "@react-navigation/material-top-tabs": "^6.2.4",
     "@react-navigation/native": "^6.0.12",
     "@react-navigation/native-stack": "^6.8.0",
     "moment": "^2.29.4",
     "react": "18.0.0",
     "react-native": "0.69.4",
     "react-native-animatable": "^1.3.3",
+    "react-native-autocomplete-dropdown": "^2.0.7",
+    "react-native-autocomplete-input": "^5.2.0",
+    "react-native-dynamic-search-bar": "^2.0.2",
     "react-native-gesture-handler": "^2.5.0",
     "react-native-image-crop-picker": "^0.38.0",
     "react-native-paper": "^4.12.4",
     "react-native-password-strength-meter": "^0.0.5",
+    "react-native-platform-searchbar": "^1.2.3",
     "react-native-safe-area-context": "^4.3.3",
     "react-native-screens": "^3.16.0",
+    "react-native-spinkit": "^1.5.1",
+    "react-native-tab-view": "^3.1.1",
     "react-native-textinput-effects": "^0.6.3",
     "react-native-vector-icons": "^9.2.0",
     "styled-components": "^5.3.5"
