--- a/codecov.yml
+++ b/codecov.yml
@@ -1,7 +1,5 @@
 ignore:
-    - "**/forgot_password.js"
-    - "**/LoginScreen.js"
-    - "**/SignUpScreen.js"
-    - "**/Welcome_Page"
+    - "**/PostCard.js"
+
     
     
