--- a/SwapShop/package.json
+++ b/SwapShop/package.json
@@ -21,6 +21,7 @@
     "@react-navigation/material-top-tabs": "^6.2.4",
     "@react-navigation/native": "^6.0.12",
     "@react-navigation/native-stack": "^6.8.0",
+    "firebase-admin": "^11.0.1",
     "moment": "^2.29.4",
     "react": "18.0.0",
     "react-native": "0.69.4",
