some unit tests

--- a/codecov.yml
+++ b/codecov.yml
@@ -9,4 +9,6 @@ ignore:
     - "**/fieldValue.js "
     - "**/firestore.js"
     - "**/buildQuerySnapShot.js"
-    
+        - "**/home_page.js"
+        - "**/TradePage.js"
+        - "**/SearchPage.js "
