--- a/SwapShop/package.json
+++ b/SwapShop/package.json
@@ -21,10 +21,13 @@
     "@react-navigation/material-top-tabs": "^6.2.4",
     "@react-navigation/native": "^6.0.12",
     "@react-navigation/native-stack": "^6.8.0",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.6",
     "firebase": "^9.11.0",
     "firebase-admin": "^11.0.1",
     "moment": "^2.29.4",
     "react": "18.0.0",
+    "react-dom": "^16.14.0",
     "react-native": "0.69.4",
     "react-native-animatable": "^1.3.3",
     "react-native-autocomplete-dropdown": "^2.0.7",
@@ -41,6 +44,7 @@
     "react-native-tab-view": "^3.1.1",
     "react-native-textinput-effects": "^0.6.3",
     "react-native-vector-icons": "^9.2.0",
+    "save-dev": "^0.0.1-security",
     "styled-components": "^5.3.5"
   },
   "devDependencies": {
