--- a/codecov.yml
+++ b/codecov.yml
@@ -9,6 +9,8 @@ ignore:
     - "**/fieldValue.js "
     - "**/firestore.js"
     - "**/buildQuerySnapShot.js"
-        - "**/home_page.js"
-        - "**/TradePage.js"
-        - "**/SearchPage.js "
+    - "**/home_page.js"
+    - "**/TradePage.js"
+    - "**/SearchPage.js"
+    - "**/ViewItemTobeTraded.js"
+    # - "**/ViewItemTobeTraded.js"
