--- a/SwapShop/package.json
+++ b/SwapShop/package.json
@@ -30,6 +30,7 @@
     "react-dom": "^16.14.0",
     "react-native": "0.69.4",
     "react-native-animatable": "^1.3.3",
+    "react-native-animation-library": "^0.0.8",
     "react-native-autocomplete-dropdown": "^2.0.7",
     "react-native-autocomplete-input": "^5.2.0",
     "react-native-dynamic-search-bar": "^2.0.2",
@@ -58,7 +59,7 @@
     "firestore-jest-mock": "^0.19.0",
     "jest": "^26.6.3",
     "metro-react-native-babel-preset": "^0.70.3",
-    "react-test-renderer": "^18.0.0",
+    "react-test-renderer": "^18.2.0",
     "ts-jest": "^29.0.2"
   },
   "jest": {
